--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -705,12 +705,12 @@
 （廣州音）	鷖	y
 （台山音）	鷖	í
 （廣州音）	㢊	ảy/ể
-（廣州音）	矮	ảy/ể
+（廣州音）	矮	ảy
 （台山音）	矮	ải
 （欽州音）	矮	ải
-（南寧音）	矮	(白)ay/(白)ê
-（南寧音）	矮	ảy/ể
-（廣州音）	躷	ảy/ể
+（南寧音）	矮	(白)ay
+（南寧音）	矮	ảy
+（廣州音）	躷	ảy
 （廣州音）	㙪	áy/ế
 （廣州音）	㝣	áy/ế
 （廣州音）	㞒	hý
@@ -26235,7 +26235,7 @@
 （廣州音）	厬	quỷ
 （廣州音）	垝	quỷ
 （欽州音）	垝	quỷ
-（廣州音）	姽	ngãy/ngễ
+（廣州音）	姽	ngãy
 （廣州音）	姽	quỷ
 （南寧音）	姽	quỷ
 （廣州音）	媿	khúy
@@ -30616,12 +30616,12 @@
 （南寧音）	海	hỏi
 （廣州音）	烸	hỏi
 （廣州音）	磑	hỏi
-（廣州音）	磑	ngày/ngề
+（廣州音）	磑	ngày
 （廣州音）	磑	ngòi
 （廣州音）	磑	ngọi
 （廣州音）	磑	vý
 （南寧音）	磑	(白)hài
-（南寧音）	磑	(白)ngay/(白)ngê
+（南寧音）	磑	(白)ngay
 （南寧音）	磑	ngòi
 （南寧音）	磑	úy
 （廣州音）	輆	hỏi
@@ -41208,9 +41208,9 @@
 （欽州音）	愧	khúy
 （南寧音）	愧	khúy
 （廣州音）	硊	khúy
-（廣州音）	硊	ngãy/ngễ
+（廣州音）	硊	ngãy
 （南寧音）	硊	khúy
-（南寧音）	硊	ngãy/ngễ
+（南寧音）	硊	ngãy
 （廣州音）	觖	khoát
 （廣州音）	觖	khúy
 （台山音）	觖	khut
@@ -41291,13 +41291,13 @@
 （廣州音）	鑴	khùy
 （廣州音）	隗	khùy
 （廣州音）	隗	ngày/ngề
-（廣州音）	隗	ngãy/ngễ
+（廣州音）	隗	ngãy
 （廣州音）	隗	ũy/vỹ
 （台山音）	隗	khỳ
 （台山音）	隗	vỷ
-（欽州音）	隗	ngảy/ngể
+（欽州音）	隗	ngảy
 （南寧音）	隗	khùy
-（南寧音）	隗	ngãy/ngễ
+（南寧音）	隗	ngãy
 （廣州音）	頯	khùy
 （廣州音）	馗	khùy
 （台山音）	馗	khỳ
@@ -51127,16 +51127,16 @@
 （廣州音）	䶧	ngão
 （廣州音）	齩	ngão
 （台山音）	齩	ngảo
-（廣州音）	𠱓	ngay/ngê
-（南寧音）	𠱓	ngay/ngê
-（廣州音）	𠼮	ngay/ngê
-（欽州音）	𠼮	ngay/ngê
-（南寧音）	𠼮	ngay/ngê
+（廣州音）	𠱓	ngay
+（南寧音）	𠱓	ngay
+（廣州音）	𠼮	ngay
+（欽州音）	𠼮	ngay
+（南寧音）	𠼮	ngay
 （廣州音）	㕒	ngày/ngề
 （廣州音）	㞮	ngày/ngề
-（廣州音）	㠕	ngày/ngề
+（廣州音）	㠕	ngày
 （廣州音）	㪒	ngày/ngề
-（廣州音）	㫉	ngày/ngề
+（廣州音）	㫉	ngày
 （廣州音）	䘽	ngày/ngề
 （廣州音）	倪	ngày/ngề
 （廣州音）	倪	ngạy/ngệ
@@ -51145,11 +51145,11 @@
 （南寧音）	倪	(書)ngày/(書)ngề
 （南寧音）	倪	(習)nì
 （通用版）	危	ngùi
-（廣州音）	危	ngày/ngề
+（廣州音）	危	ngày
 （台山音）	危	ngài
 （台山音）	危	ngùi
-（欽州音）	危	ngày/ngề
-（南寧音）	危	ngày/ngề
+（欽州音）	危	ngày
+（南寧音）	危	ngày
 （廣州音）	堄	ngày/ngề
 （廣州音）	堄	ngạy/ngệ
 （台山音）	堄	ngại
@@ -51157,31 +51157,31 @@
 （廣州音）	婗	ngày/ngề
 （欽州音）	婗	ngay/ngê
 （欽州音）	婗	ngày/ngề
-（廣州音）	峗	ngày/ngề
-（廣州音）	峗	ngãy/ngễ
-（南寧音）	峗	ngày/ngề
-（南寧音）	峗	ngãy/ngễ
-（廣州音）	峞	ngày/ngề
-（廣州音）	峞	ngãy/ngễ
+（廣州音）	峗	ngày
+（廣州音）	峗	ngãy
+（南寧音）	峗	ngày
+（南寧音）	峗	ngãy
+（廣州音）	峞	ngày
+（廣州音）	峞	ngãy
 （通用版）	嵬	ngùi
-（廣州音）	嵬	ngày/ngề
+（廣州音）	嵬	ngày
 （台山音）	嵬	ngài
 （台山音）	嵬	ngùi
-（欽州音）	嵬	ngày/ngề
-（南寧音）	嵬	ngày/ngề
-（廣州音）	巍	ngày/ngề
+（欽州音）	嵬	ngày
+（南寧音）	嵬	ngày
+（廣州音）	巍	ngày
 （通用版）	巍	ngùi
 （台山音）	巍	ngài
 （台山音）	巍	ngùi
-（欽州音）	巍	ngày/ngề
-（南寧音）	巍	ngày/ngề
-（廣州音）	桅	ngày/ngề
+（欽州音）	巍	ngày
+（南寧音）	巍	ngày
+（廣州音）	桅	ngày
 （廣州音）	桅	ùy
 （台山音）	桅	vỳ
 （欽州音）	桅	ùy
-（南寧音）	桅	ngày/ngề
+（南寧音）	桅	ngày
 （廣州音）	棿	ngày/ngề
-（廣州音）	犩	ngày/ngề
+（廣州音）	犩	ngày
 （廣州音）	猊	ngày/ngề
 （台山音）	猊	ngài
 （欽州音）	猊	ngày/ngề
@@ -51200,12 +51200,12 @@
 （南寧音）	霓	(書)ngày/(書)ngề
 （南寧音）	霓	(習)nì
 （通用版）	魏	ngụi
-（廣州音）	魏	ngày/ngề
-（廣州音）	魏	ngạy/ngệ
+（廣州音）	魏	ngày
+（廣州音）	魏	ngạy
 （台山音）	魏	ngại
 （台山音）	魏	ngụi
-（欽州音）	魏	ngày/ngề
-（南寧音）	魏	ngạy/ngệ
+（欽州音）	魏	ngày
+（南寧音）	魏	ngạy
 （廣州音）	鯢	ngày/ngề
 （台山音）	鯢	ngài
 （欽州音）	鯢	ngày/ngề
@@ -51217,11 +51217,11 @@
 （南寧音）	齯	ngày/ngề
 （廣州音）	𤊓	ngày/ngề
 （廣州音）	㠖	ngãy/ngễ
-（廣州音）	䃬	ngãy/ngễ
+（廣州音）	䃬	ngãy
 （廣州音）	䉝	ngãy/ngễ
 （廣州音）	䧧	ngãy/ngễ
 （廣州音）	䰙	ngãy/ngễ
-（廣州音）	厃	ngãy/ngễ
+（廣州音）	厃	ngãy
 （廣州音）	掜	ngãy/ngễ
 （廣州音）	掜	niệp
 （廣州音）	檥	ngãy/ngễ
@@ -51247,10 +51247,10 @@
 （南寧音）	蟻	ngãy/ngễ
 （廣州音）	轙	ngãy/ngễ
 （廣州音）	鈘	ngãy/ngễ
-（廣州音）	頠	ngãy/ngễ
-（南寧音）	頠	ngãy/ngễ
-（廣州音）	顗	ngãy/ngễ
-（南寧音）	顗	ngãy/ngễ
+（廣州音）	頠	ngãy
+（南寧音）	頠	ngãy
+（廣州音）	顗	ngãy
+（南寧音）	顗	ngãy
 （廣州音）	㙯	ngạy/ngệ
 （廣州音）	㜒	ngạy/ngệ
 （廣州音）	䆿	ngạy/ngệ
@@ -51259,14 +51259,14 @@
 （廣州音）	䭳	ngạy/ngệ
 （廣州音）	䱈	ngạy/ngệ
 （通用版）	偽	ngụi
-（廣州音）	偽	ngạy/ngệ
+（廣州音）	偽	ngạy
 （台山音）	偽	ngại
 （台山音）	偽	ngụi
-（欽州音）	偽	ngày/ngề
-（南寧音）	偽	ngạy/ngệ
-（廣州音）	僞	ngạy/ngệ
-（欽州音）	僞	ngày/ngề
-（南寧音）	僞	ngạy/ngệ
+（欽州音）	偽	ngày
+（南寧音）	偽	ngạy
+（廣州音）	僞	ngạy
+（欽州音）	僞	ngày
+（南寧音）	僞	ngạy
 （廣州音）	兿	ngạy/ngệ
 （廣州音）	囈	ngạy/ngệ
 （台山音）	囈	ngại
@@ -51315,7 +51315,7 @@
 （台山音）	藝	ngại
 （欽州音）	藝	ngày/ngề
 （南寧音）	藝	ngạy/ngệ
-（廣州音）	蘶	ngạy/ngệ
+（廣州音）	蘶	ngạy
 （廣州音）	褹	ngạy/ngệ
 （廣州音）	詣	ngạy/ngệ
 （台山音）	詣	ngại
@@ -63545,8 +63545,8 @@
 （欽州音）	韋	ùy
 （南寧音）	韋	ùy
 （廣州音）	鮠	ùy
-（欽州音）	鮠	ngày/ngề
-（南寧音）	鮠	ngày/ngề
+（欽州音）	鮠	ngày
+（南寧音）	鮠	ngày
 （廣州音）	𡺨	ùy
 （廣州音）	𤔡	ùy
 （廣州音）	㖐	ũy/vỹ
