--- a/quocngutihamchauva.yaml
+++ b/quocngutihamchauva.yaml
@@ -5896,8 +5896,8 @@
 奡	ngào
 樂	ngào
 婗	ngay/ngê
-𠼮	ngay/ngê
-隗	ngảy/ngể
+𠼮	ngay
+隗	ngảy
 蟻	ngảy/ngể
 倪	ngày/ngề
 猊	ngày/ngề
@@ -5905,14 +5905,14 @@
 霓	ngày/ngề
 鯢	ngày/ngề
 睨	ngày/ngề
-危	ngày/ngề
-巍	ngày/ngề
-洈	ngày/ngề
-鮠	ngày/ngề
-嵬	ngày/ngề
-偽	ngày/ngề
-僞	ngày/ngề
-魏	ngày/ngề
+危	ngày
+巍	ngày
+洈	ngày
+鮠	ngày
+嵬	ngày
+偽	ngày
+僞	ngày
+魏	ngày
 藝	ngày/ngề
 囈	ngày/ngề
 詣	ngày/ngề
