--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -61,7 +61,7 @@
 哎	(又)ay
 唉	(又)ay
 矮	(白)ay
-矮	ảy/ể
+矮	ảy
 嫕	áy/ế
 曀	áy/ế
 瞖	áy/ế
@@ -9123,16 +9123,16 @@
 𢳆	(白)ngào
 咬	(文)ngão
 樂	ngạo
-磑	(白)ngay/(白)ngê
-𠱓	ngay/ngê
-𠼮	ngay/ngê
+磑	(白)ngay
+𠱓	ngay
+𠼮	ngay
 倪	(書)ngày/(書)ngề
-危	ngày/ngề
-峗	ngày/ngề
-嵬	ngày/ngề
-巍	ngày/ngề
-桅	ngày/ngề
-洈	ngày/ngề
+危	ngày
+峗	ngày
+嵬	ngày
+巍	ngày
+桅	ngày
+洈	ngày
 猊	ngày/ngề
 蜺	ngày/ngề
 霓	(書)ngày/(書)ngề
@@ -9141,15 +9141,15 @@
 𨺙	ngày/ngề
 輗	ngày/ngề
 齯	ngày/ngề
-鮠	ngày/ngề
-峗	ngãy/ngễ
-硊	ngãy/ngễ
+鮠	ngày
+峗	ngãy
+硊	ngãy
 艤	ngãy/ngễ
 蟻	ngãy/ngễ
-螘	ngãy/ngễ
-隗	ngãy/ngễ
-顗	ngãy/ngễ
-頠	ngãy/ngễ
+螘	ngãy
+隗	ngãy
+顗	ngãy
+頠	ngãy
 乂	ngạy/ngệ
 偽	ngạy/ngệ
 僞	ngạy/ngệ
@@ -16850,7 +16850,7 @@
 累遷	lỗi xiêm
 累進	lỗi chấn
 日積月累	yật chich yoạt lỗi
-危如累卵	ngày yừ lỗi loản/ngề yừ lỗi loản
+危如累卵	ngày yừ lỗi loản
 累教不改	lỗi káo bât kỏi
 累年豐收	lỗi niền phung sâu
 連篇累牘	liền piên lỗi đục
@@ -18189,7 +18189,7 @@
 轉瞬	choản sấn
 轉變	choản biến
 轉讓	choản yượng
-轉危爲安	choản ngày ùy on/choản ngề ùy on
+轉危爲安	choản ngày ùy on
 轉敗爲勝	choản bại ùy sính
 轉身	choản sân
 左轉	chỏ choản
@@ -18694,7 +18694,7 @@
 非難	phi nạn
 駁難	bóc nạn
 辯難	biện nạn
-危難	ngày nạn/ngề nạn
+危難	ngày nạn
 遇難	yự nạn
 排憂解難	pài yâu kải nạn
 救苦救難	kấu phổ kấu nạn
@@ -19247,8 +19247,8 @@
 青嗷嗷	xênh ngáo ngáo
 白截截	bạch chẹt chẹt
 白宿宿	bạch sluc sluc
-矮黕黕	ảy đẩm đẩm/ể đẩm đẩm
-矮𦛠𦛠	ảy net net/ể net net
+矮黕黕	ảy đẩm đẩm
+矮𦛠𦛠	ảy net net
 高㗂㗂	kô slằng slằng
 高嫋嫋	kô nèo nèo
 肥豚豚	phì thần thần
