--- a/quocyuchiquongchauyam.yaml
+++ b/quocyuchiquongchauyam.yaml
@@ -187,8 +187,8 @@
 鷖	ay/ê
 㢊	ảy/ể
 欸	ảy
-矮	ảy/ể
-躷	ảy/ể
+矮	ảy
+躷	ảy
 㙪	áy/ế
 㝣	áy/ế
 㞒	áy/ế
@@ -22953,26 +22953,26 @@
 穾	ngão
 齩	ngão
 樂	ngạo
-𠱓	ngay/ngê
-𠼮	ngay/ngê
+𠱓	ngay
+𠼮	ngay
 㕒	ngày/ngề
 㞮	ngày/ngề
-㠕	ngày/ngề
+㠕	ngày
 㪒	ngày/ngề
 㫉	ngày/ngề
 䘽	ngày/ngề
 倪	ngày/ngề
 儿	ngày/ngề
 兒	ngày/ngề
-危	ngày/ngề
-堄	ngày/ngề
+危	ngày
+堄	ngày
 婗	ngày/ngề
-峗	ngày/ngề
-峞	ngày/ngề
-嵬	ngày/ngề
+峗	ngày
+峞	ngày
+嵬	ngày
 嶬	ngày/ngề
-巍	ngày/ngề
-桅	ngày/ngề
+巍	ngày
+桅	ngày
 棿	ngày/ngề
 洈	ngày/ngề
 淣	ngày/ngề
@@ -22983,27 +22983,27 @@
 觬	ngày/ngề
 輗	ngày/ngề
 郳	ngày/ngề
-隗	ngày/ngề
+隗	ngày
 霓	ngày/ngề
-魏	ngày/ngề
+魏	ngày
 鯢	ngày/ngề
 麑	ngày/ngề
 麛	ngày/ngề
 齯	ngày/ngề
 𤊓	ngày/ngề
 㠖	ngãy/ngễ
-䃬	ngãy/ngễ
+䃬	ngãy
 䉝	ngãy/ngễ
 䧧	ngãy/ngễ
 䰙	ngãy/ngễ
-厃	ngãy/ngễ
-姽	ngãy/ngễ
-峗	ngãy/ngễ
-峞	ngãy/ngễ
+厃	ngãy
+姽	ngãy
+峗	ngãy
+峞	ngãy
 嶬	ngãy/ngễ
 掜	ngãy/ngễ
 檥	ngãy/ngễ
-硊	ngãy/ngễ
+硊	ngãy
 礒	ngãy/ngễ
 艤	ngãy/ngễ
 蛾	ngãy/ngễ
@@ -23012,8 +23012,8 @@
 轙	ngãy/ngễ
 鈘	ngãy/ngễ
 钀	ngãy/ngễ
-隗	ngãy/ngễ
-頠	ngãy/ngễ
+隗	ngãy
+頠	ngãy
 顗	ngãy/ngễ
 齮	ngãy/ngễ
 㙯	ngạy/ngệ
@@ -23024,8 +23024,8 @@
 䭳	ngạy/ngệ
 䱈	ngạy/ngệ
 倪	ngạy/ngệ
-偽	ngạy/ngệ
-僞	ngạy/ngệ
+偽	ngạy
+僞	ngạy
 兿	ngạy/ngệ
 囈	ngạy/ngệ
 埶	ngạy/ngệ
@@ -23054,7 +23054,7 @@
 讛	ngạy/ngệ
 豙	ngạy/ngệ
 驇	ngạy/ngệ
-魏	ngạy/ngệ
+魏	ngạy
 鮨	ngạy/ngệ
 𠎵	ngạy/ngệ
 𢏗	ngạy/ngệ
