--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -3,7 +3,7 @@
 #使用指南：一個讀音可以同時存在多種正寫方式，譬如話uy 同 vy,呢兩種正寫喺手寫情況底下同粵語國語字發音系統入面並無分別。
 #ay同ê正寫嘅韻腹發音相同，呢兩種正寫嘅分別在於，漢字嘅詞源係漢越詞或者有明確音變規律嘅純越詞語用ê，其餘嘅非漢字詞、唔符合一般音韻變化規律嘅發音，同埋用嚟表音嘅表示韻腹發音而冇漢字意思嘅音節依然使用ay正寫
 #韻首字母k喺韻腹字母a u o â ă ư ô ơ前邊可以用字母c替代
-#version: 23/5/2025
+#version: 3/6/2025
 #author: cathaylab
 （廣州音）	邊	binh
 （廣州音）	邊	biên
@@ -2547,7 +2547,7 @@
 （欽州音）	皕	bich
 （南寧音）	皕	bich
 （廣州音）	胇	bật
-（廣州音）	胇	pháy/phế
+（廣州音）	胇	pháy/
 （廣州音）	胇	phạy/phệ
 （廣州音）	胈	bật
 （南寧音）	胈	bạt
@@ -2899,11 +2899,11 @@
 （欽州音）	貱	bé
 （欽州音）	貱	bí
 （廣州音）	費	bý
-（廣州音）	費	pháy/phế
+（廣州音）	費	pháy
 （台山音）	費	phí
-（欽州音）	費	pháy/phế
+（欽州音）	費	pháy
 （南寧音）	費	bí
-（南寧音）	費	pháy/phế
+（南寧音）	費	pháy
 （廣州音）	輩	búi
 （廣州音）	輩	bý
 （台山音）	輩	bói
@@ -4501,7 +4501,7 @@
 （廣州音）	姵	bụi
 （廣州音）	姵	púi
 （廣州音）	怫	bụi
-（廣州音）	怫	pháy/phế
+（廣州音）	怫	pháy/
 （廣州音）	怫	phật
 （台山音）	怫	phut
 （台山音）	怫	phí
@@ -17282,35 +17282,35 @@
 （廣州音）	𦆮	phay
 （廣州音）	𦑩	phay
 （廣州音）	𧃸	phay
-（廣州音）	疿	pháy/phế
-（廣州音）	疿	phạy/phệ
-（廣州音）	疿	phảy/phể
+（廣州音）	疿	pháy
+（廣州音）	疿	phạy
+（廣州音）	疿	phảy
 （廣州音）	疿	phỷ
 （南寧音）	疿	phỉ
-（廣州音）	痱	pháy/phế
-（廣州音）	痱	phạy/phệ
-（廣州音）	痱	phảy/phể
+（廣州音）	痱	pháy
+（廣州音）	痱	phạy
+（廣州音）	痱	phảy
 （廣州音）	痱	phỳ
 （廣州音）	痱	phỷ
 （台山音）	痱	phỉ
 （欽州音）	痱	bùi
 （南寧音）	痱	phỉ
 （南寧音）	痱	phì
-（廣州音）	㵒	pháy/phế
+（廣州音）	㵒	pháy
 （欽州音）	㵒	phè
 （廣州音）	㾱	pháy/phế
 （廣州音）	䉬	pháy/phế
 （廣州音）	䑔	pháy/phế
 （廣州音）	䕠	pháy/phế
 （廣州音）	䚨	pháy/phế
-（廣州音）	䛍	pháy/phế
-（南寧音）	䛍	pháy/phế
-（廣州音）	䠊	pháy/phế
+（廣州音）	䛍	pháy
+（南寧音）	䛍	pháy
+（廣州音）	䠊	pháy
 （廣州音）	䠊	phỵ
-（廣州音）	䰁	pháy/phế
-（廣州音）	俷	pháy/phế
-（廣州音）	剕	pháy/phế
-（廣州音）	剕	phạy/phệ
+（廣州音）	䰁	pháy
+（廣州音）	俷	pháy
+（廣州音）	剕	pháy
+（廣州音）	剕	phạy
 （廣州音）	剕	phỵ
 （台山音）	剕	phí
 （台山音）	剕	phí
@@ -17320,33 +17320,33 @@
 （台山音）	廢	phỉ
 （欽州音）	廢	pháy/phế
 （南寧音）	廢	pháy/phế
-（廣州音）	昲	pháy/phế
+（廣州音）	昲	pháy
 （廣州音）	曊	phy
-（廣州音）	曊	pháy/phế
+（廣州音）	曊	pháy
 （廣州音）	櫠	pháy/phế
-（廣州音）	沸	pháy/phế
+（廣州音）	沸	pháy
 （廣州音）	沸	phât
 （台山音）	沸	phí
-（欽州音）	沸	pháy/phế
+（欽州音）	沸	pháy
 （欽州音）	沸	phẹt
-（南寧音）	沸	pháy/phế
+（南寧音）	沸	pháy
 （南寧音）	沸	phât
-（廣州音）	濷	pháy/phế
-（廣州音）	狒	pháy/phế
+（廣州音）	濷	pháy
+（廣州音）	狒	pháy
 （廣州音）	狒	phât
-（廣州音）	狒	phạy/phệ
+（廣州音）	狒	phạy
 （廣州音）	狒	phỵ
 （台山音）	狒	phí
-（欽州音）	狒	pháy/phế
+（欽州音）	狒	pháy
 （南寧音）	狒	(語)phât
 （南寧音）	狒	(語)phật
 （南寧音）	狒	phị
 （廣州音）	癈	pháy/phế
-（廣州音）	砩	pháy/phế
+（廣州音）	砩	pháy
 （廣州音）	砩	phât
 （廣州音）	砩	phật
 （台山音）	砩	phut
-（南寧音）	砩	pháy/phế
+（南寧音）	砩	pháy
 （南寧音）	砩	phật
 （廣州音）	肺	pháy/phế
 （廣州音）	肺	púi
@@ -17362,47 +17362,47 @@
 （欽州音）	芾	phât
 （南寧音）	芾	pháy/phế
 （南寧音）	芾	phât
-（廣州音）	鐨	pháy/phế
+（廣州音）	鐨	pháy
 （台山音）	鐨	phí
-（欽州音）	鐨	pháy/phế
-（南寧音）	鐨	pháy/phế
-（廣州音）	靅	pháy/phế
-（廣州音）	髴	pháy/phế
+（欽州音）	鐨	pháy
+（南寧音）	鐨	pháy
+（廣州音）	靅	pháy
+（廣州音）	髴	pháy
 （廣州音）	髴	phât
 （南寧音）	髴	phât
-（廣州音）	㔗	phạy/phệ
-（廣州音）	䀟	phạy/phệ
+（廣州音）	㔗	phạy
+（廣州音）	䀟	phạy
 （台山音）	䀟	phut
-（廣州音）	䆏	phạy/phệ
-（廣州音）	䨾	phạy/phệ
+（廣州音）	䆏	phạy
+（廣州音）	䨾	phạy
 （台山音）	䨾	phỉ
 （廣州音）	吠	phạy/phệ
 （台山音）	吠	phị
 （欽州音）	吠	phày/phề
 （南寧音）	吠	phạy/phệ
-（廣州音）	屝	phạy/phệ
+（廣州音）	屝	phạy
 （廣州音）	屝	phỷ
-（廣州音）	淝	phạy/phệ
+（廣州音）	淝	phạy
 （廣州音）	淝	phỳ
 （台山音）	淝	phì
 （欽州音）	淝	phì
 （南寧音）	淝	phì
-（廣州音）	肥	phạy/phệ
+（廣州音）	肥	phạy
 （廣州音）	肥	phỳ
 （台山音）	肥	phì
 （欽州音）	肥	phì
 （南寧音）	肥	phì
-（廣州音）	萉	phạy/phệ
+（廣州音）	萉	phạy
 （廣州音）	萉	phỳ
 （廣州音）	蜚	phy
-（廣州音）	蜚	phạy/phệ
+（廣州音）	蜚	phạy
 （廣州音）	蜚	phỷ
 （台山音）	蜚	phí
 （欽州音）	蜚	phi
 （欽州音）	蜚	phỉ
 （南寧音）	蜚	phi
 （南寧音）	蜚	phỉ
-（廣州音）	蜰	phạy/phệ
+（廣州音）	蜰	phạy
 （廣州音）	蜰	phỳ
 （廣州音）	蜰	phỷ
 （台山音）	蜰	bý
@@ -55263,13 +55263,13 @@
 （廣州音）	𨬯	say/sê
 （通用版）	使	slỉ
 （廣州音）	使	sí
-（廣州音）	使	sảy/sể
+（廣州音）	使	sảy
 （廣州音）	使	sỉ
 （台山音）	使	slủ
 （台山音）	使	sỏi
-（欽州音）	使	sảy/sể
+（欽州音）	使	sảy
 （欽州音）	使	sỉ
-（南寧音）	使	(習)sảy/(習)sể
+（南寧音）	使	(習)sảy
 （南寧音）	使	(書)sỉ
 （南寧音）	使	(書)sí
 （通用版）	洗	slảy/slể
@@ -55280,14 +55280,14 @@
 （欽州音）	洗	sliển
 （欽州音）	洗	slảy/slể
 （南寧音）	洗	slảy/slể
-（廣州音）	駛	sảy/sể
+（廣州音）	駛	sảy
 （廣州音）	駛	sỉ
 （台山音）	駛	sỏi
-（欽州音）	駛	sảy/sể
-（南寧音）	駛	sảy/sể
-（廣州音）	𧳅	sảy/sể
+（欽州音）	駛	sảy
+（南寧音）	駛	sảy
+（廣州音）	𧳅	sảy
 （廣州音）	𧳅	sỉ
-（廣州音）	𩢲	sảy/sể
+（廣州音）	𩢲	sảy
 （廣州音）	㔟	sáy/sế
 （廣州音）	㔺	sáy/sế
 （廣州音）	㭡	sáy/sế
@@ -57660,7 +57660,7 @@
 （廣州音）	史	sỉ
 （台山音）	史	slủ
 （欽州音）	史	sỉ
-（南寧音）	史	(習)sảy/(習)sể
+（南寧音）	史	(習)sảy
 （南寧音）	史	(書)sỉ
 （廣州音）	宩	sỉ
 （廣州音）	鉂	sỉ
