--- a/quocngutihamchauva.yaml
+++ b/quocngutihamchauva.yaml
@@ -1755,18 +1755,18 @@
 罰	phạt
 閥	phạt
 筏	phạt
-匪	phảy/phể
-誹	phảy/phể
-悱	phảy/phể
-斐	phảy/phể
-榧	phảy/phể
+匪	phảy
+誹	phảy
+悱	phảy
+斐	phảy
+榧	phảy
 芾	pháy/phế
 肺	pháy/phế
-狒	pháy/phế
+狒	pháy
 廢	pháy/phế
-沸	pháy/phế
-費	pháy/phế
-鐨	pháy/phế
+沸	pháy
+費	pháy
+鐨	pháy
 吠	phày/phề
 拂	phăc
 礊	phặc
@@ -6746,8 +6746,8 @@
 𪘞	sáo
 篩	say/sê
 躧	say/sê
-使	sảy/sể
-駛	sảy/sể
+使	sảy
+駛	sảy
 世	sáy/sế
 勢	sáy/sế
 逝	sày/sề
