--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -2720,14 +2720,14 @@
 麾	(文)phay
 噅	(文)phay
 煇	(文)phay
-䛍	pháy/phế
+䛍	pháy
 廢	pháy/phế
-沸	pháy/phế
-砩	pháy/phế
+沸	pháy
+砩	pháy
 肺	pháy/phế
 芾	pháy/phế
-費	pháy/phế
-鐨	pháy/phế
+費	pháy
+鐨	pháy
 吠	phạy/phệ
 礊	phăc
 𦑌	(語)phặc
@@ -10220,9 +10220,9 @@
 睄	(語)sào
 篩	say/sê
 簁	say/sê
-使	(習)sảy/(習)sể
-史	(習)sảy/(習)sể
-駛	sảy/sể
+使	(習)sảy
+史	(習)sảy
+駛	sảy
 世	sáy/sế
 勢	sáy/sế
 笹	sáy/sế
@@ -14084,7 +14084,7 @@
 上乘	sượng sịnh
 下乘	hạ sịnh
 史乘	sỉ sịnh
-史乘	sảy sịnh/sể sịnh
+史乘	sảy sịnh
 大乘	đại sịnh
 小乘	sliểu sịnh
 萬乘	mạn sịnh
@@ -14188,18 +14188,18 @@
 伽馬	ka mã
 伽馬射線	ka mã sẹ sliến
 佃作	thiền chóc
-使者	sảy chẻ/sể chẻ
-使命	sảy mịnh/sể mịnh
-使館	sảy quổn/sể quổn
-使節	sảy chiết/sể chiết
-大使	đại sảy/đại sể
-公使	kung sảy/kung sể
-出使	xoat sảy/xoat sể
-節度使	chiết độ sảy/chiết độ sể
-布政使	bố chính sảy/bố chính sể
-按察使	ón xát sảy/ón xát sể
-不斬來使	bât chảm lòi sảy/bât chảm lòi sể
-使用	sảy yụng/sể yụng
+使者	sảy chẻ
+使命	sảy mịnh
+使館	sảy quổn
+使節	sảy chiết
+大使	đại sảy
+公使	kung sảy
+出使	xoat sảy
+節度使	chiết độ sảy
+布政使	bố chính sảy
+按察使	ón xát sảy
+不斬來使	bât chảm lòi sảy
+使用	sảy yụng
 供給	kung khâp
 供應	kung yính
 供不起	kung bât hỉ
@@ -14338,7 +14338,7 @@
 假公濟私	kả kung cháy si/kả kung chế si
 真假	chân kả
 假如	kả yừ
-假使	kả sảy/kả sể
+假使	kả sảy
 假貨	kả phó
 假想	kả slưởng
 假定	kả định
@@ -15228,14 +15228,14 @@
 出差	xoat xai
 差遣	xai hiển
 差役	xai yịch
-差使	xai sảy/xai sể
+差使	xai sảy
 差事	xai sụ
 差事	xai sị
 兼差	kiêm xai
 郵差	yầu xai
 聽差	thinh xai
 衙差	ngà xai
-鬼使神差	quỷ sảy sần xai/quỷ sể sần xai
+鬼使神差	quỷ sảy sần xai
 專差	choan xai
 美差	mĩ xai
 信差	sloán xai
@@ -15340,7 +15340,7 @@
 強人所難	khưỡng yần slỏ nàn
 強詞奪理	khưỡng xù đoạt lĩ
 強詞奪理	khưỡng xì đoạt lĩ
-強使	khưỡng sảy/khưỡng sể
+強使	khưỡng sảy
 強諫	khưỡng kán
 倔強	quật khưỡng
 勥嘴	kượng chổi
@@ -15684,7 +15684,7 @@
 片斷	piến thoãn
 當機立斷	đong ki lập thoãn
 斷頭臺	thoãn thầu thòi
-斷代史	thoãn đọi sảy/thoãn đọi sể
+斷代史	thoãn đọi sảy
 容易	yùng yị
 難易	nàn yị
 易如反掌	yị yừ phản chưởng
@@ -16685,7 +16685,7 @@
 禁磨	khâm mò
 禁冷	khâm lãnh
 禁熱	khâm yiệt
-禁使	khâm sảy/khâm sể
+禁使	khâm sảy
 禁用	khâm yụng
 禁用	kấm yụng
 禪宗	siềm chung
@@ -16906,7 +16906,7 @@
 縱令	chụng lịnh
 縱言	chụng yiền
 縱步	chụng bộ
-縱使	chụng sảy/chụng sể
+縱使	chụng sảy
 縱波	chụng bo
 縱酒	chụng chẩu
 縱容	chụng yùng
@@ -17197,7 +17197,7 @@
 荷盾	hò đận
 荷蘭	hò làn
 荷蘭豆	hò lan đậu
-荷馬史詩	hò mã sảy si/hò mã sể si
+荷馬史詩	hò mã sảy si
 荷載	họ chói
 荷重	họ xũng
 荷鋤	họ xò
@@ -17585,7 +17585,7 @@
 行遠自邇	hằng yoãn chị yĩ
 行醫	hằng yi
 行雲流水	hằng vần lầu sổi
-行駛	hằng sảy/hằng sể
+行駛	hằng sảy
 行騙	hằng piến
 銀行	ngần hòng
 行列	hòng liệt
@@ -18100,8 +18100,8 @@
 車馬砲	kư mã péo
 車馬	kư mã
 車馬	xe mã
-車馬費	kư mã pháy/kư mã phế
-車馬費	xe mã pháy/xe mã phế
+車馬費	kư mã pháy
+車馬費	xe mã pháy
 舟車	châu kư
 舟車勞頓	châu kư lồ đận
 年載	niền chỏi
@@ -18714,7 +18714,7 @@
 寧願	nình yoản
 追悔靡及	chôi phổi mĩ kập
 奢靡	se mì
-靡費	mì pháy/mì phế
+靡費	mì pháy
 嘈天巴閉	xồ thiên ba báy/xồ thiên ba bế
 靡敝	mì bị
 靡廢公物	mì pháy kung mật/mì phế kung mật
@@ -18851,7 +18851,7 @@
 舖面	pố miện
 店舖	điếm pố
 沮誦	chư chụng
-大使館	đại sảy quổn/đại sể quổn
+大使館	đại sảy quổn
 成數	xình số
 幾成	kỉ xình
 钂鈀	thỏng pà
