--- a/quocyuchiquongchauyam.yaml
+++ b/quocyuchiquongchauyam.yaml
@@ -6526,56 +6526,56 @@
 𦆮	phay
 𦑩	phay
 𧃸	phay
-疿	phảy/phể
-痱	phảy/phể
-㵒	pháy/phế
+疿	phảy
+痱	phảy
+㵒	pháy
 㾱	pháy/phế
 䉬	pháy/phế
 䑔	pháy/phế
 䕠	pháy/phế
 䚨	pháy/phế
-䛍	pháy/phế
-䠊	pháy/phế
-䰁	pháy/phế
-俷	pháy/phế
-剕	pháy/phế
+䛍	pháy
+䠊	pháy
+䰁	pháy
+俷	pháy
+剕	pháy
 廃	pháy/phế
 廢	pháy/phế
-怫	pháy/phế
-昲	pháy/phế
-曊	pháy/phế
+怫	pháy
+昲	pháy
+曊	pháy
 杮	pháy/phế
 櫠	pháy/phế
-沸	pháy/phế
+沸	pháy
 濷	pháy/phế
-狒	pháy/phế
-疿	pháy/phế
-痱	pháy/phế
+狒	pháy
+疿	pháy
+痱	pháy
 癈	pháy/phế
-砩	pháy/phế
+砩	pháy
 肺	pháy/phế
-胇	pháy/phế
+胇	pháy
 芾	pháy/phế
-費	pháy/phế
-鐨	pháy/phế
-靅	pháy/phế
-髴	pháy/phế
-㔗	phạy/phệ
-䀟	phạy/phệ
-䆏	phạy/phệ
-䨾	phạy/phệ
-剕	phạy/phệ
+費	pháy
+鐨	pháy
+靅	pháy
+髴	pháy
+㔗	phạy
+䀟	phạy
+䆏	phạy
+䨾	phạy
+剕	phạy
 吠	phạy/phệ
-屝	phạy/phệ
-淝	phạy/phệ
-狒	phạy/phệ
-疿	phạy/phệ
-痱	phạy/phệ
-肥	phạy/phệ
-胇	phạy/phệ
-萉	phạy/phệ
-蜚	phạy/phệ
-蜰	phạy/phệ
+屝	phạy
+淝	phạy
+狒	phạy
+疿	phạy
+痱	phạy
+肥	phạy
+胇	phạy
+萉	phạy
+蜚	phạy
+蜰	phạy
 鼣	phạy/phệ
 㖧	phân
 㛰	phân
@@ -25418,13 +25418,13 @@
 𦎾	say/sê
 𦚵	say/sê
 𨬯	say/sê
-使	sảy/sể
+使	sảy
 枲	sảy/sể
 洒	sảy/sể
 洗	sảy/sể
-駛	sảy/sể
-𧳅	sảy/sể
-𩢲	sảy/sể
+駛	sảy
+𧳅	sảy
+𩢲	sảy
 㔟	sáy/sế
 㔺	sáy/sế
 㭡	sáy/sế
