--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -29681,7 +29681,7 @@
 （台山音）	吁	yệc
 （欽州音）	吁	hi
 （南寧音）	吁	hư
-（南寧音）	吁	(又)yư
+（南寧音）	吁	(又)ư
 （通用版）	噓	slừ
 （廣州音）	噓	hui
 （廣州音）	噓	hưa
@@ -32994,7 +32994,7 @@
 （廣州音）	燠	ổ
 （台山音）	燠	yuc
 （南寧音）	燠	yuc
-（南寧音）	燠	yứ
+（南寧音）	燠	ứ
 （南寧音）	燠	ố
 （廣州音）	纋	yâu
 （通用版）	耰	yưu
@@ -37830,7 +37830,7 @@
 （廣州音）	于	ư
 （台山音）	于	í
 （欽州音）	于	yì
-（南寧音）	于	yư
+（南寧音）	于	ư
 （南寧音）	于	yừ
 （廣州音）	亐	ư
 （廣州音）	唹	ư
@@ -37844,7 +37844,7 @@
 （台山音）	於	ỉ
 （台山音）	於	í
 （欽州音）	於	y
-（南寧音）	於	yư
+（南寧音）	於	ư
 （南寧音）	於	u
 （廣州音）	旕	ư
 （廣州音）	杅	yừ
@@ -37854,7 +37854,7 @@
 （廣州音）	淤	ư
 （台山音）	淤	ỉ
 （欽州音）	淤	y
-（南寧音）	淤	yư
+（南寧音）	淤	ư
 （廣州音）	玗	ư
 （台山音）	玗	í
 （廣州音）	瘀	ứ
@@ -37862,7 +37862,7 @@
 （廣州音）	瘀	ư
 （台山音）	瘀	ỉ
 （欽州音）	瘀	y
-（南寧音）	瘀	yử
+（南寧音）	瘀	ử
 （廣州音）	盓	u
 （廣州音）	盓	ư
 （廣州音）	穻	yữ
@@ -37876,7 +37876,7 @@
 （廣州音）	紆	ư
 （台山音）	紆	í
 （欽州音）	紆	y
-（南寧音）	紆	yư
+（南寧音）	紆	ư
 （廣州音）	芋	vụ
 （廣州音）	芋	ư
 （台山音）	芋	vũ
@@ -37891,7 +37891,7 @@
 （台山音）	迂	húi
 （台山音）	迂	í
 （欽州音）	迂	y
-（南寧音）	迂	yư
+（南寧音）	迂	ư
 （廣州音）	迃	ư
 （廣州音）	邘	yừ
 （廣州音）	邘	ư
@@ -37904,13 +37904,13 @@
 （廣州音）	傴	ử
 （台山音）	傴	ỉ
 （欽州音）	傴	ỷ
-（南寧音）	傴	yử
+（南寧音）	傴	ử
 （廣州音）	噢	o
 （廣州音）	噢	ử
 （廣州音）	噢	ố
 （台山音）	噢	ó
 （欽州音）	噢	o
-（南寧音）	噢	yử
+（南寧音）	噢	ử
 （南寧音）	噢	(語)ổ
 （南寧音）	噢	ố
 （廣州音）	嫗	ứ
@@ -37918,7 +37918,7 @@
 （台山音）	嫗	ỉ
 （台山音）	嫗	ấu
 （欽州音）	嫗	ỷ
-（南寧音）	嫗	yử
+（南寧音）	嫗	ử
 （廣州音）	痀	khui
 （廣州音）	痀	khùi
 （廣州音）	痀	ử
@@ -37927,13 +37927,13 @@
 （通用版）	魚	ngừ
 （通用版）	魚	ngữ
 （廣州音）	魚	yừ
-（廣州音）	魚	ử
+（廣州音）	魚	ử/yữ
 （台山音）	魚	ngùi
 （台山音）	魚	ngũi
 （欽州音）	魚	nhì
 （南寧音）	魚	yừ
 （廣州音）	𩺰	yừ
-（廣州音）	𩺰	ử
+（廣州音）	𩺰	ử/yữ
 （廣州音）	𩺰	ǹg
 （廣州音）	䣴	ứ
 （廣州音）	棜	ứ
@@ -37942,7 +37942,7 @@
 （廣州音）	飫	ứ
 （台山音）	飫	ỉ
 （台山音）	飫	yị
-（南寧音）	飫	yứ
+（南寧音）	飫	ứ
 （廣州音）	饇	ứ
 （廣州音）	㐵	yừ
 （廣州音）	㔱	yừ
