--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -6150,18 +6150,18 @@
 㶲	yụng
 佣	(文)yụng
 用	yụng
-于	yư
-於	yư
-吁	(又)yư
-淤	yư
-紆	yư
-迂	yư
-傴	yử
-噢	yử
-嫗	yử
-瘀	yử
-燠	yứ
-飫	yứ
+于	ư
+於	ư
+吁	(又)ư
+淤	ư
+紆	ư
+迂	ư
+傴	ử
+噢	ử
+嫗	ử
+瘀	ử
+燠	ứ
+飫	ứ
 予	yừ
 于	yừ
 余	yừ
@@ -14253,7 +14253,7 @@
 隨便	xồi biện
 簡便	kản biện
 不便	bât biện
-便於	biện yư
+便於	biện ư
 便車	biện xe
 小便	sliểu biện
 便是	biện sị
@@ -14602,7 +14602,7 @@
 優勝劣敗	yâu sính loạt bại
 取勝	xử sính
 以弱勝強	yĩ yược sính khường
-勝於	sính yư
+勝於	sính ư
 勝地	sính đị
 勝境	sính kỉnh
 勝似	sính xũ
@@ -14870,7 +14870,7 @@
 嘩嘩地	va va đị
 嘩啦	va la
 嘩啦啦	va la la
-噢咻	yử yâu
+噢咻	ử yâu
 囉嗦	lo slo
 囉囉嗦嗦	lo lo slo slo
 囉里囉嗦	lo lĩ lo slo
@@ -17663,9 +17663,9 @@
 裨益	bi yich
 裨補闕漏	bi bổ khoát lậu
 裨助	bi chọ
-無裨於事	mồ bi yư sụ
-無裨於事	mồ bi yư sị
-於事無裨	yư sụ mồ bi
+無裨於事	mồ bi ư sụ
+無裨於事	mồ bi ư sị
+於事無裨	ư sụ mồ bi
 於事無裨	yư sị mồ bi
 大有裨益	đại yẫu bi yich
 有所裨益	yẫu slỏ bi yich
@@ -18506,7 +18506,7 @@
 一技之長	yât kị chi xường
 取長補短	xử xường bổ đoản
 擅長	siện xường
-長於	xường yư
+長於	xường ư
 長久	xường kẩu
 長空	xường hung
 長年	xường niền
