--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -1,6 +1,6 @@
 #粵語國語字總合書寫建議體，集合粵語廣州音欽州音台山音南寧音同通用粵語音
 #大粵國音實錄 Đại Oạt Quóc Yâm Sật Lục
-#使用指南：一個讀音可以同時存在多種正寫方式，譬如話uy 同 vy,呢兩種正寫喺手寫情況底下同粵語國語字發音系統入面並無分別。
+#使用指南：一個讀音可以同時存在多種正寫方式，譬如話uy 同 uy/vy,呢兩種正寫喺手寫情況底下同粵語國語字發音系統入面並無分別。
 #ay同ê正寫嘅韻腹發音相同，呢兩種正寫嘅分別在於，漢字嘅詞源係漢越詞或者有明確音變規律嘅純越詞語用ê，其餘嘅非漢字詞、唔符合一般音韻變化規律嘅發音，同埋用嚟表音嘅表示韻腹發音而冇漢字意思嘅音節依然使用ay正寫
 #韻首字母k喺韻腹字母a u o â ă ư ô ơ前邊可以用字母c替代
 #version: 3/6/2025
@@ -29,9 +29,9 @@
 （廣州音）	响	hưởng
 （廣州音）	响	hảy
 （廣州音）	威	vai
-（廣州音）	威	vy
-（台山音）	威	vý
-（欽州音）	威	vy
+（廣州音）	威	uy/vy
+（台山音）	威	úy/vý
+（欽州音）	威	uy/vy
 （南寧音）	威	uy
 （廣州音）	吖	a
 （廣州音）	吖	ơ
@@ -16796,10 +16796,10 @@
 （廣州音）	凷	phái
 （廣州音）	勓	phái
 （廣州音）	喟	phái
-（廣州音）	喟	vý
-（廣州音）	喟	vỵ
+（廣州音）	喟	úy/vý
+（廣州音）	喟	ụy/vỵ
 （廣州音）	喟	ủy
-（台山音）	喟	vỷ
+（台山音）	喟	ủy/vỷ
 （欽州音）	喟	vè
 （欽州音）	喟	ủy
 （南寧音）	喟	ụy
@@ -17220,7 +17220,7 @@
 （廣州音）	瀈	phay
 （廣州音）	灳	phay
 （廣州音）	煇	phay
-（廣州音）	煇	vy
+（廣州音）	煇	uy/vy
 （廣州音）	煇	vận
 （台山音）	煇	phún
 （台山音）	煇	phí
@@ -19447,13 +19447,13 @@
 （廣州音）	䫥	phủi
 （廣州音）	洧	phủi
 （廣州音）	洧	ũy/vỹ
-（台山音）	洧	vỷ
+（台山音）	洧	ủy/vỷ
 （南寧音）	洧	phổi
 （廣州音）	燘	mũi
 （廣州音）	燘	phủi
 （廣州音）	痏	phủi
 （廣州音）	痏	ũy/vỹ
-（台山音）	痏	vỷ
+（台山音）	痏	ủy/vỷ
 （南寧音）	痏	phổi
 （廣州音）	賄	khủi
 （廣州音）	賄	phủi
@@ -19462,7 +19462,7 @@
 （南寧音）	賄	phổi
 （廣州音）	鮪	phủi
 （廣州音）	鮪	ũy/vỹ
-（台山音）	鮪	vỷ
+（台山音）	鮪	ủy/vỷ
 （欽州音）	鮪	ủy
 （南寧音）	鮪	phổi
 （廣州音）	㑰	phúi
@@ -25363,7 +25363,7 @@
 （欽州音）	攰	kùi
 （南寧音）	攰	quị
 （廣州音）	癐	quị
-（廣州音）	癐	vy
+（廣州音）	癐	uy/vy
 （欽州音）	癐	kùi
 （南寧音）	癐	quị
 （南寧音）	癐	uy
@@ -26161,7 +26161,7 @@
 （南寧音）	洼	va
 （廣州音）	溈	qui
 （台山音）	溈	ký
-（台山音）	溈	vỳ
+（台山音）	溈	ùy/vỳ
 （欽州音）	溈	ùy
 （南寧音）	溈	quy
 （廣州音）	潙	qui
@@ -27076,7 +27076,7 @@
 （廣州音）	囗	quóc
 （廣州音）	囗	ùy
 （台山音）	囗	koc
-（台山音）	囗	vỳ
+（台山音）	囗	ùy/vỳ
 （欽州音）	囗	ùy
 （廣州音）	囯	quóc
 （廣州音）	囶	quóc
@@ -29695,7 +29695,7 @@
 （廣州音）	圩	hui
 （廣州音）	圩	ùy
 （廣州音）	圩	yừ
-（台山音）	圩	vỳ
+（台山音）	圩	ùy/vỳ
 （欽州音）	圩	hi
 （南寧音）	圩	hư
 （南寧音）	圩	ùy
@@ -30619,7 +30619,7 @@
 （廣州音）	磑	ngày
 （廣州音）	磑	ngòi
 （廣州音）	磑	ngọi
-（廣州音）	磑	vý
+（廣州音）	磑	úy/vý
 （南寧音）	磑	(白)hài
 （南寧音）	磑	(白)ngay
 （南寧音）	磑	ngòi
@@ -33774,7 +33774,7 @@
 （南寧音）	鋭	(又)yỗi
 （南寧音）	鋭	yội
 （廣州音）	鏸	sụi
-（廣州音）	鏸	vỵ
+（廣州音）	鏸	ụy/vỵ
 （廣州音）	鏸	yụi
 （廣州音）	𠮏	yụi
 （廣州音）	𥈠	yụi
@@ -37461,7 +37461,7 @@
 （南寧音）	癰	yung
 （廣州音）	維	ùy
 （廣州音）	維	yung
-（台山音）	維	vỳ
+（台山音）	維	ùy/vỳ
 （欽州音）	維	ùy
 （南寧音）	維	ùy
 （廣州音）	翁	yung
@@ -39203,11 +39203,11 @@
 （廣州音）	乚	oát
 （廣州音）	乚	yoạt
 （廣州音）	噦	oát
-（廣州音）	噦	vý
+（廣州音）	噦	úy/vý
 （廣州音）	噦	yoạt
-（台山音）	噦	vý
+（台山音）	噦	úy/vý
 （台山音）	噦	oạt
-（欽州音）	噦	vý
+（欽州音）	噦	úy/vý
 （欽州音）	噦	yiệt
 （欽州音）	噦	ọt
 （南寧音）	噦	oạt
@@ -40928,7 +40928,7 @@
 （南寧音）	膾	khúy
 （廣州音）	薈	khúi
 （廣州音）	薈	khủi
-（廣州音）	薈	vý
+（廣州音）	薈	úy/vý
 （廣州音）	薈	vúi
 （廣州音）	薈	vụi
 （台山音）	薈	vọi
@@ -41025,7 +41025,7 @@
 （欽州音）	活	vột
 （南寧音）	活	vột
 （廣州音）	濊	khót
-（廣州音）	濊	vý
+（廣州音）	濊	úy/vý
 （廣州音）	眓	khót
 （南寧音）	眓	phốt
 （廣州音）	筈	khót
@@ -41294,7 +41294,7 @@
 （廣州音）	隗	ngãy
 （廣州音）	隗	ũy/vỹ
 （台山音）	隗	khỳ
-（台山音）	隗	vỷ
+（台山音）	隗	ủy/vỷ
 （欽州音）	隗	ngảy
 （南寧音）	隗	khùy
 （南寧音）	隗	ngãy
@@ -41494,7 +41494,7 @@
 （欽州音）	權	khiền
 （南寧音）	權	khoàn
 （廣州音）	腃	khoàn
-（廣州音）	腃	vý
+（廣州音）	腃	úy/vý
 （廣州音）	蜷	khoàn
 （台山音）	蜷	khùn
 （欽州音）	蜷	khiền
@@ -43807,7 +43807,7 @@
 （廣州音）	蘽	lũi
 （南寧音）	蘽	lỗi
 （廣州音）	蜼	lũi
-（廣州音）	蜼	vỵ
+（廣州音）	蜼	ụy/vỵ
 （廣州音）	蜼	ủy
 （廣州音）	蠝	lũi
 （廣州音）	誄	lũi
@@ -43844,7 +43844,7 @@
 （廣州音）	䮑	lụi
 （廣州音）	勴	lụi
 （廣州音）	彙	lụi
-（廣州音）	彙	vỵ
+（廣州音）	彙	ụy/vỵ
 （廣州音）	彙	vụi
 （台山音）	彙	vọi
 （欽州音）	彙	vùi
@@ -50682,7 +50682,7 @@
 （南寧音）	餒	nỗi
 （廣州音）	餧	nõi
 （廣州音）	餧	nũi
-（廣州音）	餧	vý
+（廣州音）	餧	úy/vý
 （南寧音）	餧	nỗi
 （南寧音）	餧	úy
 （廣州音）	鮾	nũi
@@ -51177,7 +51177,7 @@
 （南寧音）	巍	ngày
 （廣州音）	桅	ngày
 （廣州音）	桅	ùy
-（台山音）	桅	vỳ
+（台山音）	桅	ùy/vỳ
 （欽州音）	桅	ùy
 （南寧音）	桅	ngày
 （廣州音）	棿	ngày/ngề
@@ -51323,7 +51323,7 @@
 （南寧音）	詣	ngạy/ngệ
 （廣州音）	誽	ngạy/ngệ
 （廣州音）	讆	ngạy/ngệ
-（廣州音）	讆	vỵ
+（廣州音）	讆	ụy/vỵ
 （廣州音）	讛	ngạy/ngệ
 （廣州音）	豙	ngạy/ngệ
 （廣州音）	驇	ngạy/ngệ
@@ -56805,7 +56805,7 @@
 （廣州音）	娷	sụi
 （廣州音）	嬘	sụi
 （廣州音）	彗	sụi
-（廣州音）	彗	vỵ
+（廣州音）	彗	ụy/vỵ
 （台山音）	彗	phị
 （欽州音）	彗	vùi
 （南寧音）	彗	ụy
@@ -56813,10 +56813,10 @@
 （廣州音）	旞	sụi
 （南寧音）	旞	sội
 （廣州音）	槥	sụi
-（廣州音）	槥	vỵ
+（廣州音）	槥	ụy/vỵ
 （台山音）	槥	phị
 （廣州音）	檅	sụi
-（廣州音）	檅	vỵ
+（廣州音）	檅	ụy/vỵ
 （廣州音）	檖	sụi
 （廣州音）	櫘	sụi
 （廣州音）	澻	sụi
@@ -56862,7 +56862,7 @@
 （廣州音）	穟	sụi
 （南寧音）	穟	sội
 （廣州音）	篲	sụi
-（廣州音）	篲	vỵ
+（廣州音）	篲	ụy/vỵ
 （台山音）	篲	phị
 （通用版）	粋	slụi
 （廣州音）	粋	sụi
@@ -56874,7 +56874,7 @@
 （欽州音）	萃	xùi
 （南寧音）	萃	xối
 （廣州音）	蔧	sụi
-（廣州音）	蔧	vỵ
+（廣州音）	蔧	ụy/vỵ
 （台山音）	蔧	phị
 （廣州音）	襚	sụi
 （南寧音）	襚	sội
@@ -56888,7 +56888,7 @@
 （欽州音）	遂	slùi
 （南寧音）	遂	sội
 （廣州音）	鏏	sụi
-（廣州音）	鏏	vỵ
+（廣州音）	鏏	ụy/vỵ
 （南寧音）	鏏	ụy
 （廣州音）	鐆	sụi
 （廣州音）	鐩	sụi
@@ -56903,7 +56903,7 @@
 （廣州音）	𤎩	sụi
 （廣州音）	𤭢	sụi
 （廣州音）	𥶙	sụi
-（廣州音）	𥶙	vỵ
+（廣州音）	𥶙	ụy/vỵ
 （廣州音）	𨪂	sụi
 （廣州音）	㡄	sun
 （廣州音）	㨚	sun
@@ -62123,7 +62123,7 @@
 （欽州音）	摥	thóng
 （南寧音）	摥	thóng
 （廣州音）	熨	thóng
-（廣州音）	熨	vý
+（廣州音）	熨	úy/vý
 （廣州音）	熨	vât
 （廣州音）	熨	vận
 （台山音）	熨	hóng
@@ -62499,7 +62499,7 @@
 （台山音）	嗵	hủng
 （南寧音）	嗵	thung
 （廣州音）	囲	thung
-（台山音）	囲	vỳ
+（台山音）	囲	ùy/vỳ
 （廣州音）	樋	thung
 （廣州音）	熥	thung
 （台山音）	熥	húng
@@ -62933,14 +62933,14 @@
 （廣州音）	譮	vạ
 （廣州音）	黊	vạ
 （廣州音）	㗏	vai
-（廣州音）	㗏	vy
+（廣州音）	㗏	uy/vy
 （廣州音）	㛻	vai
 （廣州音）	䴜	vai
 （廣州音）	崴	vai
-（廣州音）	崴	vy
+（廣州音）	崴	uy/vy
 （廣州音）	崴	vải
-（台山音）	崴	vý
-（欽州音）	崴	vy
+（台山音）	崴	úy/vý
+（欽州音）	崴	uy/vy
 （南寧音）	崴	uy
 （廣州音）	瀤	vai
 （廣州音）	瀤	vài
@@ -62983,9 +62983,9 @@
 （台山音）	壞	vại
 （欽州音）	壞	vài
 （南寧音）	壞	vại
-（廣州音）	恚	vý
+（廣州音）	恚	úy/vý
 （廣州音）	恚	vại
-（廣州音）	恚	vỵ
+（廣州音）	恚	ụy/vỵ
 （台山音）	恚	phị
 （欽州音）	恚	ùy
 （南寧音）	恚	ụy
@@ -63227,70 +63227,70 @@
 （廣州音）	螖	vạt
 （台山音）	螖	vạt
 （欽州音）	螖	vạt
-（廣州音）	㙎	vy
-（廣州音）	㣦	vy
-（廣州音）	㮃	vy
-（廣州音）	䫋	vy
-（廣州音）	䴧	vy
-（廣州音）	倭	vy
+（廣州音）	㙎	uy/vy
+（廣州音）	㣦	uy/vy
+（廣州音）	㮃	uy/vy
+（廣州音）	䫋	uy/vy
+（廣州音）	䴧	uy/vy
+（廣州音）	倭	uy/vy
 （廣州音）	倭	vo
 （廣州音）	倭	ủy
 （廣州音）	倭	vỏ
 （台山音）	倭	vó
-（台山音）	倭	vỷ
+（台山音）	倭	ủy/vỷ
 （欽州音）	倭	vo
 （南寧音）	倭	uy
 （南寧音）	倭	vo
 （南寧音）	倭	vỏ
-（廣州音）	喴	vy
+（廣州音）	喴	uy/vy
 （廣州音）	喴	vi
-（欽州音）	喴	vy
-（廣州音）	委	vy
+（欽州音）	喴	uy/vy
+（廣州音）	委	uy/vy
 （廣州音）	委	ủy
-（台山音）	委	vỷ
-（欽州音）	委	vy
+（台山音）	委	ủy/vỷ
+（欽州音）	委	uy/vy
 （欽州音）	委	ủy
 （南寧音）	委	uy
 （南寧音）	委	ủy
-（廣州音）	媙	vy
-（欽州音）	媙	vy
+（廣州音）	媙	uy/vy
+（欽州音）	媙	uy/vy
 （南寧音）	媙	uy
-（廣州音）	揻	vy
-（廣州音）	楲	vy
-（廣州音）	痿	vy
+（廣州音）	揻	uy/vy
+（廣州音）	楲	uy/vy
+（廣州音）	痿	uy/vy
 （廣州音）	痿	ủy
-（台山音）	痿	vỷ
+（台山音）	痿	ủy/vỷ
 （欽州音）	痿	ủy
 （南寧音）	痿	ủy
-（廣州音）	縅	vy
-（廣州音）	萎	vy
-（廣州音）	萎	vý
+（廣州音）	縅	uy/vy
+（廣州音）	萎	uy/vy
+（廣州音）	萎	úy/vý
 （廣州音）	萎	ủy
-（台山音）	萎	vỷ
+（台山音）	萎	ủy/vỷ
 （欽州音）	萎	ủy
 （南寧音）	萎	ủy
-（廣州音）	葳	vy
-（台山音）	葳	vỷ
-（欽州音）	葳	vy
+（廣州音）	葳	uy/vy
+（台山音）	葳	ủy/vỷ
+（欽州音）	葳	uy/vy
 （南寧音）	葳	uy
-（廣州音）	蜲	vy
+（廣州音）	蜲	uy/vy
 （廣州音）	蜲	ủy
-（廣州音）	蝛	vy
+（廣州音）	蝛	uy/vy
 （南寧音）	蝛	uy
-（廣州音）	蟡	vy
-（廣州音）	覣	vy
+（廣州音）	蟡	uy/vy
+（廣州音）	覣	uy/vy
 （南寧音）	覣	uy
-（廣州音）	逶	vy
+（廣州音）	逶	uy/vy
 （廣州音）	逶	ủy
-（台山音）	逶	vỷ
-（欽州音）	逶	vy
+（台山音）	逶	ủy/vỷ
+（欽州音）	逶	uy/vy
 （南寧音）	逶	uy
-（廣州音）	隇	vy
-（廣州音）	鰃	vy
+（廣州音）	隇	uy/vy
+（廣州音）	鰃	uy/vy
 （南寧音）	鰃	vôi
-（廣州音）	鰄	vy
-（廣州音）	𨂿	vy
-（廣州音）	𨩆	vy
+（廣州音）	鰄	uy/vy
+（廣州音）	𨂿	uy/vy
+（廣州音）	𨩆	uy/vy
 （廣州音）	㕟	ủy
 （廣州音）	㩓	ủy
 （廣州音）	㷐	ủy
@@ -63298,9 +63298,9 @@
 （廣州音）	䍴	ủy
 （廣州音）	䛼	ủy
 （廣州音）	䦱	ủy
-（廣州音）	位	vỵ
+（廣州音）	位	ụy/vỵ
 （廣州音）	位	ủy
-（台山音）	位	vỵ
+（台山音）	位	ụy/vỵ
 （欽州音）	位	ùy
 （南寧音）	位	(白)ủy
 （南寧音）	位	ụy
@@ -63312,15 +63312,15 @@
 （廣州音）	唯	ùy
 （廣州音）	唯	ũy/vỹ
 （廣州音）	唯	ủy
-（台山音）	唯	vỳ
+（台山音）	唯	ùy/vỳ
 （欽州音）	唯	ùy
 （南寧音）	唯	ủy
 （南寧音）	唯	ùy
-（廣州音）	喂	vý
-（廣州音）	喂	vỵ
+（廣州音）	喂	úy/vý
+（廣州音）	喂	ụy/vỵ
 （廣州音）	喂	ủy
-（台山音）	喂	vỵ
-（欽州音）	喂	vý
+（台山音）	喂	ụy/vỵ
+（欽州音）	喂	úy/vý
 （欽州音）	喂	ủy
 （南寧音）	喂	(語)ủy
 （南寧音）	喂	úy
@@ -63339,16 +63339,16 @@
 （廣州音）	猥	vui
 （廣州音）	猥	ủy
 （廣州音）	猥	vủi
-（台山音）	猥	vý
+（台山音）	猥	úy/vý
 （欽州音）	猥	vui
 （南寧音）	猥	úy
-（廣州音）	碨	vý
+（廣州音）	碨	úy/vý
 （廣州音）	碨	ủy
-（台山音）	碨	vỵ
+（台山音）	碨	ụy/vỵ
 （南寧音）	碨	ủy
 （南寧音）	碨	úy
 （廣州音）	腲	ủy
-（廣州音）	芔	vý
+（廣州音）	芔	úy/vý
 （廣州音）	芔	ủy
 （南寧音）	芔	ủy
 （廣州音）	蒍	ũy/vỹ
@@ -63357,7 +63357,7 @@
 （廣州音）	蔿	ủy
 （南寧音）	蔿	ủy
 （廣州音）	諉	ủy
-（台山音）	諉	vỷ
+（台山音）	諉	ủy/vỷ
 （欽州音）	諉	ủy
 （南寧音）	諉	ủy
 （廣州音）	譭	ủy
@@ -63366,95 +63366,95 @@
 （廣州音）	骪	ủy
 （廣州音）	骫	ủy
 （南寧音）	骫	ủy
-（廣州音）	㕀	vý
-（廣州音）	㜇	vý
-（廣州音）	㟪	vý
-（廣州音）	㬩	vý
-（廣州音）	㷉	vý
-（廣州音）	䂕	vý
-（廣州音）	䙆	vý
-（廣州音）	䮹	vý
-（廣州音）	䲁	vý
-（欽州音）	䲁	vý
+（廣州音）	㕀	úy/vý
+（廣州音）	㜇	úy/vý
+（廣州音）	㟪	úy/vý
+（廣州音）	㬩	úy/vý
+（廣州音）	㷉	úy/vý
+（廣州音）	䂕	úy/vý
+（廣州音）	䙆	úy/vý
+（廣州音）	䮹	úy/vý
+（廣州音）	䲁	úy/vý
+（欽州音）	䲁	úy/vý
 （南寧音）	䲁	úy
-（廣州音）	䵳	vý
-（廣州音）	叞	vý
-（廣州音）	嘒	vý
-（廣州音）	嚖	vý
-（廣州音）	墛	vý
-（廣州音）	嬒	vý
-（廣州音）	尉	vý
+（廣州音）	䵳	úy/vý
+（廣州音）	叞	úy/vý
+（廣州音）	嘒	úy/vý
+（廣州音）	嚖	úy/vý
+（廣州音）	墛	úy/vý
+（廣州音）	嬒	úy/vý
+（廣州音）	尉	úy/vý
 （廣州音）	尉	vât
 （廣州音）	尉	vận
 （台山音）	尉	vut
-（台山音）	尉	vý
-（欽州音）	尉	vý
+（台山音）	尉	úy/vý
+（欽州音）	尉	úy/vý
 （南寧音）	尉	úy
 （南寧音）	尉	vât
-（廣州音）	嵔	vý
-（廣州音）	嶎	vý
-（廣州音）	徻	vý
+（廣州音）	嵔	úy/vý
+（廣州音）	嶎	úy/vý
+（廣州音）	徻	úy/vý
 （廣州音）	徻	vúi
-（廣州音）	慧	vý
-（廣州音）	慧	vỵ
+（廣州音）	慧	úy/vý
+（廣州音）	慧	ụy/vỵ
 （台山音）	慧	phị
 （欽州音）	慧	vùi
 （南寧音）	慧	(常)úy
 （南寧音）	慧	ụy
-（廣州音）	慰	vý
-（台山音）	慰	vý
-（欽州音）	慰	vý
+（廣州音）	慰	úy/vý
+（台山音）	慰	úy/vý
+（欽州音）	慰	úy/vý
 （南寧音）	慰	úy
-（廣州音）	懀	vý
-（廣州音）	暳	vý
-（廣州音）	泋	vý
-（廣州音）	犚	vý
-（廣州音）	獩	vý
-（廣州音）	畏	vý
-（台山音）	畏	vý
-（欽州音）	畏	vý
+（廣州音）	懀	úy/vý
+（廣州音）	暳	úy/vý
+（廣州音）	泋	úy/vý
+（廣州音）	犚	úy/vý
+（廣州音）	獩	úy/vý
+（廣州音）	畏	úy/vý
+（台山音）	畏	úy/vý
+（欽州音）	畏	úy/vý
 （南寧音）	畏	úy
-（廣州音）	穢	vý
+（廣州音）	穢	úy/vý
 （台山音）	穢	vói
-（台山音）	穢	vý
-（欽州音）	穢	vý
+（台山音）	穢	úy/vý
+（欽州音）	穢	úy/vý
 （南寧音）	穢	úy
-（廣州音）	罻	vý
+（廣州音）	罻	úy/vý
 （廣州音）	罻	vât
-（台山音）	罻	vý
-（廣州音）	翽	vý
+（台山音）	罻	úy/vý
+（廣州音）	翽	úy/vý
 （南寧音）	翽	úy
-（廣州音）	蔚	vý
+（廣州音）	蔚	úy/vý
 （廣州音）	蔚	vât
-（台山音）	蔚	vý
-（欽州音）	蔚	vý
+（台山音）	蔚	úy/vý
+（欽州音）	蔚	úy/vý
 （欽州音）	蔚	vât
 （南寧音）	蔚	úy
 （南寧音）	蔚	vât
-（廣州音）	薉	vý
-（台山音）	薉	vý
-（廣州音）	藯	vý
-（廣州音）	螱	vý
+（廣州音）	薉	úy/vý
+（台山音）	薉	úy/vý
+（廣州音）	藯	úy/vý
+（廣州音）	螱	úy/vý
 （南寧音）	螱	úy
-（廣州音）	褽	vý
-（廣州音）	諱	vý
+（廣州音）	褽	úy/vý
+（廣州音）	諱	úy/vý
 （廣州音）	諱	ũy/vỹ
 （台山音）	諱	phí
-（台山音）	諱	vỷ
+（台山音）	諱	ủy/vỷ
 （欽州音）	諱	ùy
 （南寧音）	諱	ụy
-（廣州音）	鐬	vý
-（廣州音）	霨	vý
+（廣州音）	鐬	úy/vý
+（廣州音）	霨	úy/vý
 （南寧音）	霨	úy
-（廣州音）	餵	vý
-（台山音）	餵	vý
-（欽州音）	餵	vý
+（廣州音）	餵	úy/vý
+（台山音）	餵	úy/vý
+（欽州音）	餵	úy/vý
 （南寧音）	餵	úy
-（廣州音）	饖	vý
-（廣州音）	𡜦	vý
-（廣州音）	𣻷	vý
-（廣州音）	𥳀	vý
-（廣州音）	𧬨	vý
+（廣州音）	饖	úy/vý
+（廣州音）	𡜦	úy/vý
+（廣州音）	𣻷	úy/vý
+（廣州音）	𥳀	úy/vý
+（廣州音）	𧬨	úy/vý
 （廣州音）	㗹	ùy
 （廣州音）	䑊	ùy
 （廣州音）	䔺	ùy
@@ -63463,24 +63463,24 @@
 （廣州音）	䝐	ùy
 （廣州音）	䧦	ùy
 （廣州音）	喡	ùy
-（廣州音）	喡	vỵ
+（廣州音）	喡	ụy/vỵ
 （廣州音）	圍	ùy
-（台山音）	圍	vỳ
+（台山音）	圍	ùy/vỳ
 （欽州音）	圍	ùy
 （南寧音）	圍	ùy
 （廣州音）	媁	ùy
-（欽州音）	媁	vy
+（欽州音）	媁	uy/vy
 （南寧音）	媁	uy
 （廣州音）	帷	ùy
-（台山音）	帷	vỳ
+（台山音）	帷	ùy/vỳ
 （欽州音）	帷	ùy
 （南寧音）	帷	ùy
 （廣州音）	幃	ùy
-（台山音）	幃	vỳ
+（台山音）	幃	ùy/vỳ
 （欽州音）	幃	ùy
 （南寧音）	幃	ùy
 （廣州音）	惟	ùy
-（台山音）	惟	vỳ
+（台山音）	惟	ùy/vỳ
 （欽州音）	惟	ùy
 （南寧音）	惟	ùy
 （廣州音）	欈	chúi
@@ -63489,25 +63489,25 @@
 （廣州音）	湋	ũy/vỹ
 （南寧音）	湋	ùy
 （廣州音）	潿	ùy
-（台山音）	潿	vỳ
+（台山音）	潿	ùy/vỳ
 （欽州音）	潿	ùy
 （南寧音）	潿	ùy
 （廣州音）	濰	ùy
-（台山音）	濰	vỳ
+（台山音）	濰	ùy/vỳ
 （欽州音）	濰	ùy
 （南寧音）	濰	ùy
 （廣州音）	為	ùy
-（廣州音）	為	vỵ
-（台山音）	為	vỳ
-（台山音）	為	vỵ
+（廣州音）	為	ụy/vỵ
+（台山音）	為	ùy/vỳ
+（台山音）	為	ụy/vỵ
 （欽州音）	為	ùy
 （南寧音）	為	(白)uy
 （南寧音）	為	ùy
 （南寧音）	為	ụy
 （廣州音）	爲	ùy
-（廣州音）	爲	vỵ
-（台山音）	爲	vỳ
-（台山音）	爲	vỵ
+（廣州音）	爲	ụy/vỵ
+（台山音）	爲	ùy/vỳ
+（台山音）	爲	ụy/vỵ
 （欽州音）	爲	ùy
 （南寧音）	爲	(白)uy
 （南寧音）	爲	ùy
@@ -63519,13 +63519,13 @@
 （廣州音）	蓶	ũy/vỹ
 （廣州音）	讉	ùy
 （廣州音）	違	ùy
-（台山音）	違	vỳ
+（台山音）	違	ùy/vỳ
 （欽州音）	違	ùy
 （南寧音）	違	ùy
 （廣州音）	遺	ùy
-（廣州音）	遺	vỵ
-（台山音）	遺	vỳ
-（台山音）	遺	vỵ
+（廣州音）	遺	ụy/vỵ
+（台山音）	遺	ùy/vỳ
+（台山音）	遺	ụy/vỵ
 （欽州音）	遺	ùy
 （南寧音）	遺	(又)yì
 （南寧音）	遺	ùy
@@ -63536,12 +63536,12 @@
 （廣州音）	鍏	ùy
 （廣州音）	鍏	ũy/vỹ
 （廣州音）	闈	ùy
-（台山音）	闈	vỳ
+（台山音）	闈	ùy/vỳ
 （欽州音）	闈	ùy
 （南寧音）	闈	ùy
 （廣州音）	韋	ùy
 （廣州音）	韋	ũy/vỹ
-（台山音）	韋	vỷ
+（台山音）	韋	ủy/vỷ
 （欽州音）	韋	ùy
 （南寧音）	韋	ùy
 （廣州音）	鮠	ùy
@@ -63558,7 +63558,7 @@
 （廣州音）	䪘	ũy/vỹ
 （廣州音）	䵋	ũy/vỹ
 （廣州音）	偉	ũy/vỹ
-（台山音）	偉	vỷ
+（台山音）	偉	ủy/vỷ
 （欽州音）	偉	ủy
 （南寧音）	偉	ủy
 （廣州音）	儰	ũy/vỹ
@@ -63570,125 +63570,125 @@
 （廣州音）	濻	ũy/vỹ
 （廣州音）	瀢	ũy/vỹ
 （廣州音）	煒	ũy/vỹ
-（台山音）	煒	vỷ
+（台山音）	煒	ủy/vỷ
 （欽州音）	煒	ủy
 （南寧音）	煒	ủy
 （廣州音）	瑋	ũy/vỹ
-（台山音）	瑋	vỷ
+（台山音）	瑋	ủy/vỷ
 （欽州音）	瑋	ủy
 （南寧音）	瑋	ủy
 （廣州音）	緯	ũy/vỹ
-（廣州音）	緯	vỵ
-（台山音）	緯	vỷ
+（廣州音）	緯	ụy/vỵ
+（台山音）	緯	ủy/vỷ
 （欽州音）	緯	ủy
 （南寧音）	緯	ủy
 （廣州音）	葦	ũy/vỹ
-（台山音）	葦	vỷ
+（台山音）	葦	ủy/vỷ
 （欽州音）	葦	ủy
 （南寧音）	葦	ùy
 （廣州音）	韑	ũy/vỹ
 （廣州音）	韙	ũy/vỹ
-（台山音）	韙	vỷ
+（台山音）	韙	ủy/vỷ
 （欽州音）	韙	ủy
 （南寧音）	韙	ủy
 （廣州音）	韡	ũy/vỹ
-（台山音）	韡	vỷ
+（台山音）	韡	ủy/vỷ
 （南寧音）	韡	ủy
 （廣州音）	颹	ũy/vỹ
 （廣州音）	𥯤	ũy/vỹ
 （廣州音）	𨗨	ũy/vỹ
-（廣州音）	㒞	vỵ
-（廣州音）	㤬	vỵ
-（廣州音）	㥜	vỵ
-（廣州音）	㥣	vỵ
-（廣州音）	㦣	vỵ
-（廣州音）	㨹	vỵ
-（廣州音）	㩨	vỵ
-（廣州音）	㻰	vỵ
-（廣州音）	䎚	vỵ
-（廣州音）	䗽	vỵ
-（廣州音）	䘙	vỵ
-（廣州音）	䜜	vỵ
-（廣州音）	䡺	vỵ
-（廣州音）	䦄	vỵ
-（廣州音）	䧥	vỵ
-（廣州音）	䪋	vỵ
-（廣州音）	䬑	vỵ
-（廣州音）	僡	vỵ
+（廣州音）	㒞	ụy/vỵ
+（廣州音）	㤬	ụy/vỵ
+（廣州音）	㥜	ụy/vỵ
+（廣州音）	㥣	ụy/vỵ
+（廣州音）	㦣	ụy/vỵ
+（廣州音）	㨹	ụy/vỵ
+（廣州音）	㩨	ụy/vỵ
+（廣州音）	㻰	ụy/vỵ
+（廣州音）	䎚	ụy/vỵ
+（廣州音）	䗽	ụy/vỵ
+（廣州音）	䘙	ụy/vỵ
+（廣州音）	䜜	ụy/vỵ
+（廣州音）	䡺	ụy/vỵ
+（廣州音）	䦄	ụy/vỵ
+（廣州音）	䧥	ụy/vỵ
+（廣州音）	䪋	ụy/vỵ
+（廣州音）	䬑	ụy/vỵ
+（廣州音）	僡	ụy/vỵ
 （台山音）	僡	phị
-（廣州音）	儶	vỵ
-（廣州音）	媦	vỵ
-（廣州音）	寭	vỵ
-（廣州音）	彚	vỵ
+（廣州音）	儶	ụy/vỵ
+（廣州音）	媦	ụy/vỵ
+（廣州音）	寭	ụy/vỵ
+（廣州音）	彚	ụy/vỵ
 （台山音）	彚	vọi
-（廣州音）	恵	vỵ
-（廣州音）	惠	vỵ
+（廣州音）	恵	ụy/vỵ
+（廣州音）	惠	ụy/vỵ
 （台山音）	惠	phị
 （欽州音）	惠	vùi
 （南寧音）	惠	ụy
-（廣州音）	憓	vỵ
+（廣州音）	憓	ụy/vỵ
 （台山音）	憓	phị
 （南寧音）	憓	ụy
-（廣州音）	懳	vỵ
-（廣州音）	橞	vỵ
+（廣州音）	懳	ụy/vỵ
+（廣州音）	橞	ụy/vỵ
 （南寧音）	橞	ụy
-（廣州音）	渭	vỵ
-（台山音）	渭	vỵ
+（廣州音）	渭	ụy/vỵ
+（台山音）	渭	ụy/vỵ
 （欽州音）	渭	ùy
 （南寧音）	渭	ụy
-（廣州音）	潓	vỵ
+（廣州音）	潓	ụy/vỵ
 （台山音）	潓	phị
 （南寧音）	潓	ụy
-（廣州音）	煟	vỵ
+（廣州音）	煟	ụy/vỵ
 （南寧音）	煟	ụy
-（廣州音）	熭	vỵ
-（廣州音）	猬	vỵ
-（廣州音）	璏	vỵ
-（廣州音）	璤	vỵ
-（廣州音）	緭	vỵ
-（廣州音）	胃	vỵ
-（台山音）	胃	vỵ
+（廣州音）	熭	ụy/vỵ
+（廣州音）	猬	ụy/vỵ
+（廣州音）	璏	ụy/vỵ
+（廣州音）	璤	ụy/vỵ
+（廣州音）	緭	ụy/vỵ
+（廣州音）	胃	ụy/vỵ
+（台山音）	胃	ụy/vỵ
 （欽州音）	胃	ùy
 （南寧音）	胃	ụy
-（廣州音）	蕙	vỵ
+（廣州音）	蕙	ụy/vỵ
 （台山音）	蕙	phị
 （欽州音）	蕙	vùi
 （南寧音）	蕙	ụy
-（廣州音）	蝟	vỵ
-（台山音）	蝟	vỵ
+（廣州音）	蝟	ụy/vỵ
+（台山音）	蝟	ụy/vỵ
 （欽州音）	蝟	ùy
 （南寧音）	蝟	(常)úy
 （南寧音）	蝟	ụy
-（廣州音）	蟪	vỵ
+（廣州音）	蟪	ụy/vỵ
 （台山音）	蟪	phị
 （欽州音）	蟪	vùi
 （南寧音）	蟪	ụy
-（廣州音）	衛	vỵ
-（台山音）	衛	vỵ
+（廣州音）	衛	ụy/vỵ
+（台山音）	衛	ụy/vỵ
 （欽州音）	衛	ùy
 （南寧音）	衛	ụy
-（廣州音）	衞	vỵ
+（廣州音）	衞	ụy/vỵ
 （南寧音）	衞	ụy
-（廣州音）	謂	vỵ
-（台山音）	謂	vỵ
+（廣州音）	謂	ụy/vỵ
+（台山音）	謂	ụy/vỵ
 （欽州音）	謂	ùy
 （南寧音）	謂	ụy
-（廣州音）	譓	vỵ
+（廣州音）	譓	ụy/vỵ
 （南寧音）	譓	ụy
-（廣州音）	譿	vỵ
-（廣州音）	讏	vỵ
-（廣州音）	躗	vỵ
-（廣州音）	躛	vỵ
-（廣州音）	軎	vỵ
-（台山音）	軎	vỵ
+（廣州音）	譿	ụy/vỵ
+（廣州音）	讏	ụy/vỵ
+（廣州音）	躗	ụy/vỵ
+（廣州音）	躛	ụy/vỵ
+（廣州音）	軎	ụy/vỵ
+（台山音）	軎	ụy/vỵ
 （欽州音）	軎	ùy
-（廣州音）	轊	vỵ
-（廣州音）	𡣺	vỵ
-（廣州音）	𣖜	vỵ
-（廣州音）	𤪳	vỵ
-（廣州音）	𦒄	vỵ
-（廣州音）	𨩋	vỵ
-（廣州音）	𨯚	vỵ
+（廣州音）	轊	ụy/vỵ
+（廣州音）	𡣺	ụy/vỵ
+（廣州音）	𣖜	ụy/vỵ
+（廣州音）	𤪳	ụy/vỵ
+（廣州音）	𦒄	ụy/vỵ
+（廣州音）	𨩋	ụy/vỵ
+（廣州音）	𨯚	ụy/vỵ
 （廣州音）	𤷇	vặc
 （廣州音）	㚃	vân
 （廣州音）	㬈	vân
@@ -64768,7 +64768,7 @@
 （廣州音）	㙗	vui
 （廣州音）	䋿	vui
 （廣州音）	偎	vui
-（台山音）	偎	vý
+（台山音）	偎	úy/vý
 （欽州音）	偎	vui
 （南寧音）	偎	(又)úy
 （南寧音）	偎	vôi
@@ -64780,13 +64780,13 @@
 （南寧音）	渨	vôi
 （廣州音）	煨	vui
 （台山音）	煨	vói
-（台山音）	煨	vý
+（台山音）	煨	úy/vý
 （欽州音）	煨	vui
 （南寧音）	煨	vôi
 （廣州音）	燰	vui
 （廣州音）	葨	vui
 （廣州音）	隈	vui
-（台山音）	隈	vý
+（台山音）	隈	úy/vý
 （欽州音）	隈	vui
 （南寧音）	隈	vôi
 （廣州音）	㛱	vủi
@@ -71096,7 +71096,7 @@
 （台山音）	𣛒	lại
 （台山音）	𣤵	yỉnh
 （南寧音）	𣛒	lạy/lệ
-（台山音）	𣨙	vỷ
+（台山音）	𣨙	ủy/vỷ
 （台山音）	𣩟	ánh
 （台山音）	𣯨	túng
 （台山音）	𣰽	khùi
@@ -71111,7 +71111,7 @@
 （台山音）	𤁽	yình
 （台山音）	𤃀	lại
 （台山音）	𤇶	chính
-（台山音）	𤈫	vý
+（台山音）	𤈫	úy/vý
 （台山音）	𤉡	slũ
 （台山音）	𤏾	chính
 （台山音）	𤑄	ngịch
